# kien-quoc

./: .env.example  .firebaserc  .gitignore  .prettierrc  .ruff.toml  Justfile  README.md  firebase.json  justfile  package.json  pyproject.toml  render.yaml  tsconfig.json
.github/workflows/: release.yml
apps/server/: package.json
apps/server/src/: index.ts
apps/web/: package.json
backend/: __init__.py  main.py
backend/config/: board_config.py  events_config.py  game_config.py  regions_config.py  scoring_config.py  settings.py
backend/game/: schemas.py  scoring.py  service.py
backend/room/: __init__.py  exceptions.py  router.py  schemas.py  service.py
backend/store/: room_store.py
backend/utils/: room_code.py
backend/websocket/: handlers.py  manager.py  router.py  state_filter.py
desktop/kien-quoc/: .gitignore  PRD.md
desktop/kien-quoc/app/: app.config.ts  eslint.config.js  package.json
monte-carlo-old/: main.py  main2.py  main3.py  main4.py  main5.py  main6.py  main72.py
scripts/: test_game.py
src/: app.css
src-tauri/: tauri.conf.json
src/components/: index.ts
src/components/game/: Lobby.tsx  index.ts
src/components/ui/: Badge.tsx  Card.tsx  ExportButton.tsx  ProgressBar.tsx  index.ts
src/config/: board.ts  events.ts  game.ts  regions.ts  tile-backgrounds.ts
src/lib/: ai.ts  scoring.ts  types.ts
src/lib/core/: GameMode.ts  OfflineMode.ts  OnlineMode.ts  index.ts
src/lib/data/: OfflineStore.ts  Transaction.ts
src/routes/: host.tsx  index.tsx  lobby.tsx  mode.tsx  online.tsx  play.tsx  region.tsx  spectator.tsx
(+101 files in other folders)
